--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 * {
     box-sizing: border-box;
     list-style: none;
+    padding: 0;
 
 }
 
@@ -14,6 +15,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    width: 1200px;
+    padding-top: 5%;
     gap: 24px;
     margin-left: auto;
     margin-right: auto;
